# codesensei

./: .gitignore  CLAUDE.md  CodeSensei_Blueprint.md  README.md
backend/: .env.example  alembic.ini  codesensei.db  requirements.txt  seed.py  test_challenges.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  challenge.py  progress.py  track.py  user.py
backend/app/prompts/: challenge_prompts.py  evaluation_prompts.py
backend/app/routes/: auth.py  challenges.py  debug.py  progress.py  tracks.py
backend/app/schemas/: challenge.py  track.py
backend/app/services/: ai_engine.py  challenge_gen.py  difficulty.py  evaluator.py  streak.py  xp_engine.py
cli/: pyproject.toml
cli/codesensei_cli/: __init__.py  api_client.py  config.py  display.py  main.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/challenge/[id]/: page.tsx
frontend/src/components/: ChallengeCard.tsx  CodeEditor.tsx  Confetti.tsx  EvaluationResult.tsx  HintPanel.tsx  LevelUpModal.tsx  Navbar.tsx  StreakCounter.tsx  Timer.tsx  TrackBadge.tsx  XPBar.tsx
frontend/src/hooks/: useTimer.ts
frontend/src/lib/: api.ts  constants.ts
