[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesensei"
version = "0.1.0"
description = "CodeSensei CLI — AI-powered coding challenges in your terminal"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
codesensei = "codesensei_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
